--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -438,46 +438,7 @@ input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
   box-shadow: none;
 }
 
-/*----------------------FORM-POST -------------------------------*/
-.div_form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.post_codoc {
-  border: 1px solid #14f6eb;
-  width: 50vw;
-  text-align: center;
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-}
-.post_codoc input {
-  height: 100%;
-  color: white;
-  background-color: #121212;
-  border: 1px solid #fff;
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-  border-radius: 5px;
-  caret-color: white;
-  padding-left: 10px;
-}
-.post_codoc textarea {
-  width: 95%;
-  height: 20vh;
-  color: white;
-  background-color: #121212;
-  border: 1px solid #fff;
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-  border-radius: 5px;
-  caret-color: white;
-  padding-left: 10px;
-}
-
+/*------------------------- MQ FORM LOGIN/REGISTER --------------------------*/
 @media screen and (max-width: 1050px) {
   article {
     width: 40vw;
@@ -538,6 +499,46 @@ input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
     font-size: 30px;
   }
 }
+/*----------------------FORM-POST -------------------------------*/
+.div_form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.post_codoc {
+  border: 1px solid #14f6eb;
+  width: 50vw;
+  text-align: center;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+}
+.post_codoc input {
+  height: 100%;
+  color: white;
+  background-color: #121212;
+  border: 1px solid #fff;
+  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+  border-radius: 5px;
+  caret-color: white;
+  padding-left: 10px;
+}
+.post_codoc textarea {
+  width: 95%;
+  height: 20vh;
+  color: white;
+  background-color: #121212;
+  border: 1px solid #fff;
+  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+  border-radius: 5px;
+  caret-color: white;
+  padding-left: 10px;
+}
+
 /*----------------------DASHBOARD -------------------------------*/
 /* header {
   user-select: none;
