--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -344,15 +344,18 @@ h1 {
       font-weight: 400;
     }
 
+    //If the value in the input is OK then it switches to green
     &:focus:valid,
     &:valid:not(:placeholder-shown) {
       outline-color: var(--clr-success-500);
     }
 
+    //red if invalid
     &:invalid:not(:placeholder-shown) {
       outline-color: var(--clr-error-500);
     }
 
+    //or yellow if some conditions are met but not all
     &:focus:invalid:not(:placeholder-shown) {
       outline-color: var(--clr-warning-500);
     }
@@ -482,49 +485,7 @@ input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
   }
 }
 
-/*----------------------FORM-POST -------------------------------*/
-
-.div_form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.post_codoc {
-  border: 1px solid #14f6eb;
-  width: 50vw;
-  text-align: center;
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-
-  input {
-    height: 100%;
-    color: white;
-    background-color: #121212;
-    border: 1px solid #fff;
-    box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-    border-radius: 5px;
-    caret-color: white;
-    padding-left: 10px;
-  }
-
-  textarea {
-    width: 95%;
-    height: 20vh;
-    color: white;
-    background-color: #121212;
-    border: 1px solid #fff;
-    box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-    border-radius: 5px;
-    caret-color: white;
-    padding-left: 10px;
-  }
-}
-
+/*------------------------- MQ FORM LOGIN/REGISTER --------------------------*/
 @media screen and (max-width: 1050px) {
   article {
     width: 40vw;
@@ -599,6 +560,49 @@ input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
 
   .toggle-panel h1 {
     font-size: 30px;
+  }
+}
+
+/*----------------------FORM-POST -------------------------------*/
+
+.div_form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.post_codoc {
+  border: 1px solid #14f6eb;
+  width: 50vw;
+  text-align: center;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+
+  input {
+    height: 100%;
+    color: white;
+    background-color: #121212;
+    border: 1px solid #fff;
+    box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+    border-radius: 5px;
+    caret-color: white;
+    padding-left: 10px;
+  }
+
+  textarea {
+    width: 95%;
+    height: 20vh;
+    color: white;
+    background-color: #121212;
+    border: 1px solid #fff;
+    box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+    border-radius: 5px;
+    caret-color: white;
+    padding-left: 10px;
   }
 }
 
