--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -189,6 +189,15 @@ section > h1 {
   justify-self: center;
 }
 
+.li-flou{
+  width: 50vw;
+  justify-self: center;
+}
+
+.li-flou:hover article.homepage-article:not(:hover){
+  filter: blur(15px);
+}
+
 article {
   justify-self: center;
   margin: 1rem;
@@ -199,9 +208,11 @@ article {
   backdrop-filter: blur(120%);
   box-shadow: 0px 8px 21px 8px var(--clr-secondary-100);
   border-radius: 20px;
+  transition: all 0.2s ease-in;
 
   &.homepage-article:hover {
     border: 1px solid var(--clr-primary-500);
+    box-shadow: 0px 8px 21px 8px var(--clr-primary-100);
     margin-block: 1rem;
     scale: 102%;
   }
@@ -248,6 +259,8 @@ article {
     box-shadow: var(--box-shadow-primary);
   }
 }
+
+
 
 .ariane {
   text-align: center;
