--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -77,6 +77,15 @@ body.dark-mode {
   background-color: #333;
   color: #e5e5e5;
 }
+body.dark-mode .hero {
+  background-color: #333;
+  box-shadow: inset 0px 8px 21px 8px rgba(20, 246, 235, 0.1), 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+}
+body.dark-mode #sidebar {
+  background-color: #333;
+  border-right: 1px solid #14f6eb;
+  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+}
 
 /* Light Mode */
 body.light-mode {
@@ -85,7 +94,7 @@ body.light-mode {
   color: #000000;
 }
 body.light-mode article {
-  box-shadow: 0px 0px 2px 2px #333;
+  box-shadow: 0px 0px 2px 2px hsl(0, 0%, 60%);
   border: none;
 }
 
@@ -116,9 +125,6 @@ body.light-mode article {
   font-weight: 900;
   width: 100%;
   height: 8rem;
-  background-color: #333;
-  border-bottom: 1px solid #14f6eb;
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
   color: #14f6eb;
 }
 .hero .codocicon {
@@ -134,9 +140,6 @@ body.light-mode article {
   left: 0;
   top: 0;
   bottom: 0;
-  background-color: #333;
-  border-right: 1px solid #14f6eb;
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
 }
 #sidebar .header-logo {
   margin: 2rem 0 2rem 0;
@@ -183,8 +186,6 @@ article {
   padding: 3rem;
   border: 1px solid #14f6eb;
   background-color: transparent;
-  -webkit-backdrop-filter: blur(120%);
-          backdrop-filter: blur(120%);
   box-shadow: 0px 8px 21px 8px var(--clr-secondary-100);
   border-radius: 20px;
   transition: all 0.2s ease-in;
