--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -90,14 +90,10 @@ body.dark-mode {
 
   .hero {
     background-color: #333;
-    // border-bottom: 1px solid #14f6eb;
-    box-shadow: inset 0px 8px 21px 8px rgba(20, 246, 235, 0.1),
-      0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-  }
-  #sidebar {
-    background-color: #333;
-    border-right: 1px solid #14f6eb;
-    box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+    box-shadow: (
+      inset 0px 0px 21px 8px rgba(20, 246, 235, 0.1),
+      0px 0px 21px 8px rgba(20, 246, 235, 0.1)
+    );
   }
 }
 
@@ -158,8 +154,8 @@ body.light-mode {
   flex-direction: column;
   align-items: center;
   left: 0;
-  top: 0;
-  bottom: 0;
+  top: 50%;
+  translate: 0 -50%;
 
   .header-logo {
     margin: 2rem 0 2rem 0;
@@ -196,13 +192,13 @@ section > h1 {
   justify-self: center;
 }
 
-.li-flou{
+.li-flou {
   width: 50vw;
   justify-self: center;
 }
 
-.li-flou:hover article.homepage-article:not(:hover){
-  filter: blur(15px);
+.li-flou:hover article.homepage-article:not(:hover) {
+  filter: blur(1px);
 }
 
 article {
@@ -265,8 +261,6 @@ article {
     box-shadow: var(--box-shadow-primary);
   }
 }
-
-
 
 .ariane {
   text-align: center;
