--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -128,13 +128,19 @@ body.light-mode article {
 
 #sidebar {
   position: fixed;
-  z-index: 600;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   left: 0;
   top: 50%;
   translate: 0 -50%;
+  width: 250px;
+  height: 100vh;
+  background: #222;
+  color: white;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #sidebar .header-logo {
   margin: 2rem 0 2rem 0;
@@ -146,6 +152,16 @@ body.light-mode article {
 }
 #sidebar ul li {
   margin: 1rem;
+}
+
+#sidebar.show {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+#sidebar.hidden {
+  transform: translateX(-100%);
+  opacity: 0;
 }
 
 /*-----------------------GLOBAL------------------------*/
@@ -161,6 +177,10 @@ a .icons {
 }
 
 /*----------------------- HOMEPAGE-------------------- */
+section {
+  height: 200vh;
+}
+
 section > h1 {
   justify-self: center;
 }
