--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -149,13 +149,19 @@ body.light-mode {
 
 #sidebar {
   position: fixed;
-  z-index: 600;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   left: 0;
   top: 50%;
   translate: 0 -50%;
+  width: 250px;
+  height: 100vh;
+  background: #222;
+  color: white;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   .header-logo {
     margin: 2rem 0 2rem 0;
@@ -172,6 +178,15 @@ body.light-mode {
   }
 }
 
+#sidebar.show {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+#sidebar.hidden {
+  transform: translateX(-100%);
+  opacity: 0;
+}
 /*-----------------------GLOBAL------------------------*/
 
 a {
@@ -187,6 +202,10 @@ a {
 }
 
 /*----------------------- HOMEPAGE-------------------- */
+
+section {
+  height: 200vh;
+}
 
 section > h1 {
   justify-self: center;
