--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -174,6 +174,10 @@ body.light-mode {
 
     li {
       margin: 1rem;
+
+      .icons {
+        width: 1.5rem;
+      }
     }
   }
 }
@@ -187,10 +191,31 @@ body.light-mode {
   transform: translateX(-100%);
   opacity: 0;
 }
+
+/*-----------------------FOOTER------------------------*/
+
+footer {
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  margin-top: auto;
+  padding: 2rem;
+  box-shadow: (
+      inset 0px 0px 21px 8px rgba(20, 246, 235, 0.1),
+      0px 0px 21px 8px rgba(20, 246, 235, 0.1)
+    );
+
+  .footer-logo {
+    margin: .5rem;
+    width: 2rem;
+  }
+}
+
+
 /*-----------------------GLOBAL------------------------*/
 
 a {
-  color: #14f6eb;
+  color: #fff;
   font-size: 1.5rem;
   &:hover {
     color: var(--clr-primary-500);
