--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -90,22 +90,53 @@ body.dark-mode {
 
   .hero {
     background-color: #333;
-    box-shadow: (
-      inset 0px 0px 21px 8px rgba(20, 246, 235, 0.1),
-      0px 0px 21px 8px rgba(20, 246, 235, 0.1)
-    );
+    // box-shadow: (
+    //   inset 0px 0px 21px 8px rgba(20, 246, 235, 0.1),
+    //   0px 0px 21px 8px rgba(20, 246, 235, 0.1)
+    // );
+  }
+
+  #sidebar {
+    background-color: #111;
+  }
+
+  article {
+    background-color: #444;
   }
 }
 
 /* Light Mode */
 body.light-mode {
   color-scheme: light;
-  background-color: hsl(0, 0%, 90%);
-  color: #000000;
+  background-color: hsl(0, 3%, 80%);
+  color: #333;
+
+  #sidebar {
+    background-color: #777;
+
+    a {
+      color: var(--clr-secondary-500);
+    }
+
+    a:hover {
+      color: var(--clr-secondary-200);
+    }
+  }
+
+  
 
   article {
-    box-shadow: 0px 0px 2px 2px hsl(0, 0%, 60%);
+    box-shadow: 0px 0px 2px 2px hsl(0, 0%, 75%);
+    background-color: #e5e5e5;
     border: none;
+  }
+
+  a {
+    color: #333;
+  }
+
+  a:hover{
+    color: #777;
   }
 }
 
@@ -154,10 +185,8 @@ body.light-mode {
   translate: 0 -50%;
   width: 250px;
   height: 100vh;
-  background: #222;
-  color: white;
   transform: translateX(-100%);
-  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   opacity: 0;
   display: flex;
   flex-direction: column;
@@ -200,10 +229,10 @@ footer {
   align-items: center;
   margin-top: auto;
   padding: 2rem;
-  box-shadow: (
-      inset 0px 0px 21px 8px rgba(20, 246, 235, 0.1),
-      0px 0px 21px 8px rgba(20, 246, 235, 0.1)
-    );
+  // box-shadow: (
+  //     inset 0px 0px 21px 8px rgba(20, 246, 235, 0.1),
+  //     0px 0px 21px 8px rgba(20, 246, 235, 0.1)
+  //   );
 
   .footer-logo {
     margin: .5rem;
@@ -215,10 +244,11 @@ footer {
 /*-----------------------GLOBAL------------------------*/
 
 a {
-  color: #fff;
+  color: var(--clr-secondary-500);
   font-size: 1.5rem;
+  transition: color 0.15s ease-in;
   &:hover {
-    color: var(--clr-primary-500);
+    color: var(--clr-secondary-300);
   }
 
   .icons {
@@ -228,9 +258,7 @@ a {
 
 /*----------------------- HOMEPAGE-------------------- */
 
-section {
-  height: 200vh;
-}
+
 
 section > h1 {
   justify-self: center;
@@ -252,8 +280,6 @@ article {
   padding: 3rem;
   border: 1px solid #14f6eb;
   background-color: transparent;
-  box-shadow: 0px 8px 21px 8px var(--clr-secondary-100);
-  border-radius: 20px;
   transition: all 0.2s ease-in;
 
   &.homepage-article:hover {
