--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -81,7 +81,7 @@ body.dark-mode .hero {
   background-color: #333;
 }
 body.dark-mode #sidebar {
-  background-color: #111;
+  background-color: #222;
 }
 body.dark-mode article {
   background-color: #444;
@@ -174,6 +174,9 @@ body.light-mode a:hover {
 }
 #sidebar ul li .icons {
   width: 1.5rem;
+}
+#sidebar ul li:hover {
+  scale: 110%;
 }
 
 #sidebar.show {
@@ -285,7 +288,7 @@ article .glow-like {
 
 h1 {
   /* apply variable changes over time */
-  animation: gradient-change 2s linear infinite alternate;
+  animation: gradient-change 20s linear infinite alternate;
   padding-block: 1rem;
   background: linear-gradient(to right in oklch, var(--＠color-1), var(--＠color-2));
   /* old browser support */
