--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -105,7 +105,7 @@ body.light-mode #sidebar a:hover {
 body.light-mode article {
   box-shadow: 0px 0px 2px 2px hsl(0, 0%, 75%);
   background-color: #e5e5e5;
-  border: none;
+  outline: 1px solid hsl(0, 0%, 75%);
 }
 body.light-mode a {
   color: #333;
@@ -231,12 +231,12 @@ article {
   margin: 1rem;
   width: 50vw;
   padding: 3rem;
-  border: 1px solid #14f6eb;
+  outline: 1px solid #14f6eb;
   background-color: transparent;
   transition: all 0.2s ease-in;
 }
 article.homepage-article:hover {
-  border: 1px solid var(--clr-primary-500);
+  outline: 1px solid var(--clr-primary-500);
   box-shadow: 0px 8px 21px 8px var(--clr-primary-100);
   margin-block: 1rem;
   scale: 102%;
