--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -559,44 +559,54 @@ input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
     font-size: 30px;
   }
 }
-/*----------------------FORM-POST -------------------------------*/
+/*----------------------FORM-CREATECODOC -------------------------------*/
 .div_form {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: #999;
 }
 
 .post_codoc {
-  border: 1px solid #14f6eb;
-  width: 50vw;
+  border: 1px solid #333;
+  width: 70vw;
   text-align: center;
-  height: 50vh;
+  height: auto;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+}
+.post_codoc label {
+  color: #333;
+  font-size: 1rem;
 }
 .post_codoc input {
   height: 100%;
+  width: 50%;
   color: white;
-  background-color: #121212;
-  border: 1px solid #fff;
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-  border-radius: 5px;
+  background-color: #999;
+  border: 1px solid #555;
   caret-color: white;
-  padding-left: 10px;
+  padding: 1rem;
+  font-size: 1rem;
 }
 .post_codoc textarea {
-  width: 95%;
-  height: 20vh;
+  width: 80%;
+  height: 30vh;
   color: white;
-  background-color: #121212;
-  border: 1px solid #fff;
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-  border-radius: 5px;
+  background-color: #999;
+  border: 1px solid #555;
   caret-color: white;
-  padding-left: 10px;
+  padding: 1rem;
+  font-size: 1rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.post_codoc .btn {
+  padding: 0.5rem;
+  width: 5rem;
+  margin: 2rem;
 }
 
 /*----------------------DASHBOARD -------------------------------*/
