--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -653,46 +653,59 @@ input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
   }
 }
 
-/*----------------------FORM-POST -------------------------------*/
+/*----------------------FORM-CREATECODOC -------------------------------*/
 
 .div_form {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: #999;
 }
 
 .post_codoc {
-  border: 1px solid #14f6eb;
-  width: 50vw;
+  border: 1px solid #333;
+  width: 70vw;
   text-align: center;
-  height: 50vh;
+  height: auto;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
+
+  label {
+    color: #333;
+    font-size: 1rem;
+  }
 
   input {
     height: 100%;
+    width: 50%;
     color: white;
-    background-color: #121212;
-    border: 1px solid #fff;
-    box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-    border-radius: 5px;
+    background-color: #999;
+    border: 1px solid #555;
     caret-color: white;
-    padding-left: 10px;
+    padding: 1rem;
+    font-size: 1rem;
   }
 
   textarea {
-    width: 95%;
-    height: 20vh;
+    width: 80%;
+    height: 30vh;
     color: white;
-    background-color: #121212;
-    border: 1px solid #fff;
-    box-shadow: 0px 8px 21px 8px rgba(20, 246, 235, 0.1);
-    border-radius: 5px;
+    background-color: #999;
+    border: 1px solid #555;
     caret-color: white;
-    padding-left: 10px;
+    padding: 1rem;
+    font-size: 1rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .btn {
+    padding: .5rem;
+    width: 5rem;
+    margin: 2rem;
+
   }
 }
 
