--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -147,6 +147,13 @@ body.light-mode a:hover {
   height: 6rem;
 }
 
+#openSidebar {
+  position: fixed;
+  bottom: 2rem;
+  left: 2rem;
+  z-index: 1;
+}
+
 #sidebar {
   position: fixed;
   left: 0;
@@ -160,6 +167,7 @@ body.light-mode a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 2;
 }
 #sidebar .header-logo {
   margin: 2rem 0 2rem 0;
