--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -513,18 +513,20 @@ input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
   article {
     width: 60vw;
   }
-  .container {
-    height: calc(100vh - 40px);
+  .container .form-box {
+    height: -moz-fit-content;
+    height: fit-content;
+    margin: 0 auto;
   }
-  .form-box {
-    padding: 0px;
-    bottom: 0;
-    width: 100%;
-    height: 70%;
+  .container .form-box.login {
+    right: 50%;
+    top: 30%;
+    transform: translateX(50%);
   }
-  .container.active .form-box {
-    right: 0;
-    bottom: 30%;
+  .container.active .form-box.register {
+    right: 50%;
+    top: 0%;
+    transform: translateX(50%);
   }
   .toggle-box::before {
     left: 0;
