--- a/public/assets/css/styles.scss
+++ b/public/assets/css/styles.scss
@@ -218,8 +218,6 @@ body.light-mode {
         scale: 110%;
       }
     }
-
-    
   }
 }
 
@@ -248,7 +246,6 @@ footer {
 }
 
 /*-----------------------GLOBAL------------------------*/
-
 
 a {
   color: var(--clr-secondary-500);
@@ -334,6 +331,10 @@ article {
 
   .glow-like {
     box-shadow: var(--box-shadow-primary);
+  }
+
+  &.homepage-article img {
+    display: none;
   }
 }
 
@@ -696,14 +697,15 @@ input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
     caret-color: white;
     padding: 1rem;
     font-size: 1rem;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
   }
 
   .btn {
-    padding: .5rem;
+    padding: 0.5rem;
     width: 5rem;
     margin: 2rem;
-
   }
 }
 
